<resources>
    <string name="app_name">zooseeker-jj-zaaz-team-52</string>
    <string name="search_hint">Search for an exhibit...</string>
    <string name="search_label">searchlabel</string>
    <string name="search_title">exhibit</string>
    <string name="defaultexhibit">DefaultExhibit</string>
    <string name="animal_name">Animal Name</string>
    <string name="exhibit_type">Exhibit Type</string>
    <string name="voice_search">voice_search</string>
    <string name="previous_text">previous text</string>
    <string name="next_text">next text</string>
    <string name="directions">Directions</string>
    <string name="textview">TextView</string>
    <string name="hello_world">Hello World</string>
    <string name="previous">Previous</string>
    <string name="next">next</string>
    <string name="_0_plan">(0) Plan</string>
    <string name="plan_view_directions">DIRECTIONS</string>
    <string name="search_create_plan">Create Plan</string>
    <string name="PLI_item_name">Item_name</string>
    <string name="PLI_location_name">location_name</string>
    <string name="PLI_distance">distance</string>
    <string name="PLI_O">○</string>
    <string name="SSI_displayed_exhibit_name">displayed exhibit name</string>
    <string name="SSI_displayed_location">displayed location</string>
    <string name="SSI_x">×</string>
    <string name="sample_node_file">sample_node_info.json</string>
    <string name="title_activity_location">LocationActivity</string>

    <string name="sample_graph_file">sample_zoo_graph.json</string>
    <string name="sample_edge_file">sample_edge_info.json</string>

    <string name="node_file">zoo_node_info.json</string>
    <string name="graph_file">zoo_graph.json</string>
    <string name="edge_file">zoo_edge_info.json</string>
    <string name="_0">[ 0 ]</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Map</string>
    <string name="title_plan">Plan</string>
    <string name="title_directions">Direction</string>
    <string name="title_activity_details2">DetailsActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_setting">Settings</string>

</resources>