<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.zooseeker_jj_zaaz_team_52.ui.Map.MapFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_plan"
        android:name="com.example.zooseeker_jj_zaaz_team_52.ui.Plan.PlanFragment"
        android:label="@string/title_plan"
        tools:layout="@layout/fragment_plan" />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.zooseeker_jj_zaaz_team_52.ui.Setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />
    <fragment
        android:id="@+id/plan_view_activity"
        android:name="com.example.zooseeker_jj_zaaz_team_52.ui.Plan.CompletedPlanFragment"
        android:label="Plan view"
        />
    <fragment
        android:id="@+id/navigation_directions"
        android:name="com.example.zooseeker_jj_zaaz_team_52.ui.Plan.DirectionFragment"
        android:label="Directions"
        />
</navigation>