<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="64dp">

    <TextView
        android:id="@+id/display_exhibit_name"
        android:layout_width="250dp"
        android:layout_height="22dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="66dp"
        android:text="@string/SSI_displayed_exhibit_name"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/delete_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/display_exhibit_loc"
        android:layout_width="197dp"
        android:layout_height="21dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="7dp"
        android:text="@string/SSI_displayed_location"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete_btn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/delete_btn"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginEnd="26dp"
        android:clickable="true"
        android:text="@string/SSI_x"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/display_exhibit_name"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>